SERVER-57782 Initialize KeyFormat in ephemeralForTest UniqueIndexData